alterando ordem do projeto mari

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 <img class="image" src="/img/tarefa-concluida.png" alt="money" /></a>
             </div>
 
-            <div class="card red">
-                <a href="https://maripage.netlify.app/" target="_blank"><div class="separacao"><h2>Página Arquitetura</h2>
-                <p>Página de Arquitetura não finalizada, mas criada para ajudar uma arquiteta a expor seus projetos e seus contatos a clientes. Tecnologias utilizadas: HTML e CSS</p></div>
-                <img class="image" src="/img/arquiteta.png" alt="money" /></a>
+            <div class="card green">
+                <a href="https://paginadelogin1.netlify.app/" target="_blank"><div class="separacao"><h2>Login</h2>
+                <p>Página de Login criada para praticar conhecimentos de CSS. Tecnologias utilizadas: HTML e CSS</p></div>
+                <img class="image" src="/img/ppp.png" alt="money" /></a>
             </div>
         </div>     
         
@@ -175,9 +175,9 @@
             </div>
 
             <div class="card red">
-                <a href="https://paginadelogin1.netlify.app/" target="_blank"><div class="separacao"><h2>Login</h2>
-                <p>Página de Login criada para praticar conhecimentos de CSS. Tecnologias utilizadas: HTML e CSS</p></div>
-                <img class="image" src="/img/ppp.png" alt="money" /></a>
+                <a href="https://maripage.netlify.app/" target="_blank"><div class="separacao"><h2>Página Arquitetura</h2>
+                <p>Página de Arquitetura não finalizada, mas criada para ajudar uma arquiteta a expor seus projetos e seus contatos a clientes. Tecnologias utilizadas: HTML e CSS</p></div>
+                <img class="image" src="/img/arquiteta.png" alt="money" /></a>
             </div>
         </div>
         
